--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "express": "^4.17.2",
     "fs-extra": "^11.1.1",
     "got": "^11.8.2",
+    "http-proxy-middleware": "^2.0.6",
     "json-array-sorter": "0.0.5",
     "logger": "github:c3pobot/logger",
     "mongoclient": "github:c3pobot/mongoclient",
