--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "bottleneck": "^2.19.5",
     "bull": "^4.11.3",
     "compression": "^1.7.4",
+    "cookie-parser": "^1.4.6",
     "crypto": "^1.0.1",
     "crypto-js": "^4.1.1",
     "express": "^4.17.2",
